4, 5章を中心に修正

--- a/text/04-繰り返し.md
+++ b/text/04-繰り返し.md
@@ -12,6 +12,8 @@
 ### 何を繰り返すのか
 何回も出てきた，家のプログラムを見てみましょう．
 
+<span class="CopyButton" onclick="copycode('lst:4-1')">c</span>
+
 ```{#lst:4-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 // 屋根を書く
@@ -43,7 +45,9 @@ t.fd(50);
 繰り返しを使って，すっきりとしたプログラムにしてみましょう．
 
 <!-- リスト 5.2.2.1 WhileHouse.java -->
-```{#lst:4-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:4-2')">c</span>
+
+```{#lst:4-2 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 屋根を書く
@@ -74,22 +78,20 @@ while( [条件式] ) {
 	処理
 }
 ```
-				
-条件式が成立(true)のした場合には，処理が実行されます．不成立(false)の場合は処理を飛ばします．
 
-処理が実行し終わると，もう一度条件式を評価します．
+条件式は前回の条件分岐によるプログラムで学習した書式と同じ書式が使えます．
 
-これを，条件式が不成立(false)になるまで繰り返します．
+条件式が成立(true)のした場合には，処理が実行されます．不成立(false)の場合は処理を飛ばします．処理が実行し終わると，もう一度条件式を評価します．これを，条件式が不成立(false)になるまで繰り返します．
 
-これをフローチャートと呼ばれる図を用いて書くと，次のようになります．
-
-#### プログラムのフローチャート
-![](img/chapter04/while_flow_chart_concrete.gif)
+これをフローチャートを用いて書くと，次のようになります．
 
 #### 繰り返しのフローチャート
 ![](img/chapter04/while_flow_chart.gif)
 
-条件式は前回の条件分岐によるプログラムで学習した書式と同じ書式が使えます． 繰り返しを止めるために，変数を使います．この変数には，「今何回繰り返したか」といった情報を格納しておきます．
+繰り返しを止めるために，変数を使います．この変数には，「今何回繰り返したか」といった情報を格納しておきます．
+
+#### プログラムのフローチャート
+![](img/chapter04/while_flow_chart_concrete.gif)
 
 ### 繰り返しを使ったプログラムの実行過程
 プログラムの実行過程と変数の値の変化を見ていきましょう．
@@ -123,7 +125,9 @@ while( [条件式] ) {
 
 ### 円を書きつづけるプログラム
 <!-- リスト 5.3.1.1 Circle.java -->
-```{#lst:4-1 .javascript .numberLines caption="Circle"}
+<span class="CopyButton" onclick="copycode('lst:4-3')">c</span>
+
+```{#lst:4-3 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
 // 円を書く
@@ -137,7 +141,10 @@ while (true) {
 ### 円を描くプログラムの改良
 上記の円を描くプログラムは，条件が無い(常に成立(true))ので止まりません．
 変数をつけ，適切な条件式を考えて，一周したらプログラムを止めるように改良しましょう．
-```{#lst:4-1 .javascript .numberLines caption="Circle"}
+
+<span class="CopyButton" onclick="copycode('lst:4-4')">c</span>
+
+```{#lst:4-4 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
 // 円を書く
@@ -159,7 +166,10 @@ while (i <= 360 /* 条件--iが360以下の間 */ ) {
 この処理パターンはよく書くので，簡略化して書ける構文（糖衣構文）である「for文」が用意されています．
 
 for文を使うと，while文よりも短く書くことができます．
-```{#lst:4-1 .javascript .numberLines caption="Circle"}
+
+<span class="CopyButton" onclick="copycode('lst:4-5')">c</span>
+
+```{#lst:4-5 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
 // 円を書く
@@ -183,7 +193,10 @@ for([初期処理] ;[条件式] ;[一回の繰返しの終了処理] ) {
 `i = i + 1` は `i++` と書くことができます．
 
 したがって，円を書くプログラムは次のように書けます．
-```{#lst:4-1 .javascript .numberLines caption="Circle"}
+
+<span class="CopyButton" onclick="copycode('lst:4-6')">c</span>
+
+```{#lst:4-6 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
 // 円を書く
@@ -196,7 +209,10 @@ for (var i = 1; i <= 360; i++) {
 ## コラム：カウントは0から？1から?{.unnumbered}
 先程のプログラムでは，iを1からカウントして，360以内の時，つまり，361になった時にループから抜けて，プログラムを止めていました．
 以下のように，iを0からカウントして，360より小さい，つまり360になった時にループから抜けて，プログラムを止めても同じことができます．
-```{#lst:4-1 .javascript .numberLines caption="Circle"}
+
+<span class="CopyButton" onclick="copycode('lst:4-7')">c</span>
+
+```{#lst:4-7 .javascript .numberLines caption="Circle"}
 var t = createTurtle();
 
 // 円を書く
@@ -213,7 +229,7 @@ for (var i = 0; i < 360; i++) {
 ファイル名は「Circle.java」とすること． -->
 
 ### while文からfor文への書き換え
-「4.2.2 家を描くプログラム（while文書き換え版）」をfor文に書き換えてみましょう．
+「4.2.2 家を描くプログラム（while文書き換え版）」をfor文に書き換えてください．
 
 ファイル名は「housefor.js」とすること．
 
@@ -223,23 +239,42 @@ for (var i = 0; i < 360; i++) {
 ヒント: 大きさと角度を入力できるようにすると，大きさや角度を変える時にプログラムを書き換える必要がないので，実験しやすくなります．
 
 ### 四角形を描くプログラム（繰り返しを使って）
-四角形を描くプログラムを繰り返しを使って書き直してみましょう．
+四角形を描くプログラムを繰り返しを使って書き直してください．
 
 ファイル名は「box.js」とすること．
 
 ### 五角形を描くプログラム（繰り返しを使って）
-五角形を描くプログラムを繰り返しを使って書き直してみましょう．
+五角形を描くプログラムを繰り返しを使って書き直してください．
 
 ファイル名は「pentagon3.js」とすること．
 
 ### 星を描くプログラム（繰り返しを使って）
-星を描くプログラムを繰り返しを使って書き直してみましょう．
+星を描くプログラムを繰り返しを使って書き直してください．
 
 ファイル名は「star3.js」とすること．
 
 ### アスタリスクを描くプログラム（繰り返しを使って）
-アスタリスクを描くプログラムを繰り返しを使って書いてみましょう．
+アスタリスクを描くプログラムを繰り返しを使って書いてください．
 
 ![アスタリスク](img/chapter04/q_asterisk.jpg)
 
 ファイル名は「asterisk.js」とすること．
+
+### 階段を描くプログラム
+ユーザーの入力を受け取り(input命令を使う)，入力された数をNとして，N段の階段（下図は，N=5の例）
+を描くプログラムを作ってください．
+
+![階段](img/chapter04/q_stair.png)
+
+ファイル名は「stair.js」とすること．
+
+### 正N角形を描くプログラム
+ユーザーの入力を受け取り，入力された数をNとして，正N角形を描くプログラムを作ってください．
+
+ファイル名は「regularpolygon.js」とすること．
+
+### 繰り返しを使った作品制作
+10回以上の繰り返しを含む，作品を作ってください．
+
+ファイル名は「myrepeat.js」とすること．
+
