--- a/text/08-再帰.md
+++ b/text/08-再帰.md
@@ -32,7 +32,9 @@ n! = n * (n-1)!
 この式を応用し，再帰を使うことで，階乗を求めるプログラムを次のように書ける．
 
 <!-- リスト 14.2.2.1 Factorial.js -->
-```{#lst:7-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:8-1')">c</span>
+
+```{#lst:8-1 .javascript .numberLines caption="House"}
 println('factorial(1) = ' + factorial(1));
 println('factorial(2) = ' + factorial(2));
 println('factorial(3) = ' + factorial(3));
@@ -67,8 +69,10 @@ if (n == 1) {
 
 このコピーの様子を視覚化して理解するために，呼出し過程を図示してみよう．
 
+<span class="CopyButton" onclick="copycode('lst:8-2')">c</span>
+
 <!-- リスト 14.2.2.2 FactorialWithPrint.js -->
-```{#lst:7-1 .javascript .numberLines caption="House"}
+```{#lst:8-2 .javascript .numberLines caption="House"}
 print('factorial(5, 0) = ' + factorial(5, 0));
 
 function factorial(n, indentCount) {
@@ -137,8 +141,10 @@ fib(6) = fib(5) + fib(4) = 13
 ```
 フィボナッチ数列も再帰の例でよく出てくる例で，再帰を使うことでプログラムを次のように書ける．
 
+<span class="CopyButton" onclick="copycode('lst:8-3')">c</span>
+
 <!-- リスト 14.2.3.1 Fibonacci.js -->
-```{#lst:7-1 .javascript .numberLines caption="House"}
+```{#lst:8-3 .javascript .numberLines caption="House"}
 println('fib(1) = ' + fib(1));
 println('fib(2) = ' + fib(2));
 println('fib(3) = ' + fib(3));
@@ -162,8 +168,10 @@ function fib(n) {
 
 これも呼出し過程を図示してみよう
 
+<span class="CopyButton" onclick="copycode('lst:8-4')">c</span>
+
 <!-- リスト 14.2.3.2 FibonacciWithPrint.js -->
-```{#lst:7-1 .javascript .numberLines caption="House"}
+```{#lst:8-4 .javascript .numberLines caption="House"}
 print('fib(5, 0) = ' + fib(5, 0));
 
 function fib(n, indentCount) {
@@ -238,8 +246,9 @@ fib(5, 0)
 
 まず，「Y」を描くプログラムを書く．ここで一回テストしてみることが重要である． （いきなり再帰のプログラム書こうとした先輩は，ことごとく失敗しています！）
 
-リスト 14.3.1 DrawY.js
-```{#lst:7-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:8-5')">c</span>
+
+```{#lst:8-5 .javascript .numberLines caption="House"}
 var t = createTurtle();
 canvasSize(500,500);
 t.warp(250,400);
@@ -269,8 +278,10 @@ function drawY(length) {
 
 次に，大きな「Y」の先に小さな「Y」を書くように，再帰呼び出しを行う．再帰の終点も忘れずに！
 
+<span class="CopyButton" onclick="copycode('lst:8-6')">c</span>
+
 <!-- リスト 14.3.2 DrawTree.js -->
-```{#lst:7-1 .javascript .numberLines caption="House"}
+```{#lst:8-6 .javascript .numberLines caption="House"}
 var t = createTurtle();
 canvasSize(500,500);
 t.warp(250,400);
