--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -11,7 +11,9 @@
 次のプログラムを見てみましょう．
 
 <!-- リスト 6.2.1.1 FourSquares.java -->
-```{#lst:4-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:5-1')">c</span>
+
+```{#lst:5-1 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 窓を描く
@@ -64,7 +66,9 @@ for (var j = 1; j <= 4; j++) {
 ![花びらを書くプログラム](img/chapter05/petal.gif)
 
 <!-- リスト 6.3.1.1 Petal.java -->
-```{#lst:4-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:5-2')">c</span>
+
+```{#lst:5-2 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 花びらを描く
@@ -86,7 +90,9 @@ for (var i = 1; i <= 120; i++) { // 円弧を描く
 花びらを描くには繰り返しが必要で，花を描くにはさらにそれを繰り返す必要があります． 以下のように，繰り返しの入れ子を使います．
 
 <!-- リスト 6.3.2.1 Flower.java -->
-```{#lst:4-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:5-3')">c</span>
+
+```{#lst:5-3 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 花をかく（6枚の花びらを書く）
@@ -119,7 +125,9 @@ for (var j = 1; j <= 6; j++) {
 以下に，よくある間違いの例を示します．
 
 <!-- リスト 6.3.3.1 BadFlower.java -->
-```{#lst:4-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:5-4')">c</span>
+
+```{#lst:5-4 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 花をかく（6枚の花びらを書く）
@@ -157,7 +165,9 @@ for (var i = 1; i <= 120; i++) { // 円弧を描く
 次のプログラムを見てみましょう．
 
 <!-- リスト 6.4.1.1 MultiCircle.java -->
-```{#lst:4-1 .javascript .numberLines caption="MultiCircle"}
+<span class="CopyButton" onclick="copycode('lst:5-5')">c</span>
+
+```{#lst:5-5 .javascript .numberLines caption="MultiCircle"}
 var t = createTurtle();
 
 for (var j = 1; j <= 10; j++) { // （円を）10個描く
@@ -181,8 +191,12 @@ for (var j = 1; j <= 10; j++) { // （円を）10個描く
 剰余演算子(%)を使うと，割り算のあまりを求めることができます． これを使うと，例えば奇数と偶数を判定することができます．
 
 <!-- リスト 6.4.2.1 SquareAndTriangle.java -->
-```{#lst:4-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:5-6')">c</span>
+
+```{#lst:5-6 .javascript .numberLines caption="House"}
 var t = createTurtle();
+
+t.warp(200, 100);
 var length = 50; // １辺の長さ
 
 for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
@@ -190,20 +204,22 @@ for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
   if (i % 2 == 0) { // 偶数なら
     for (var j = 1; j <= 4; j++) { // 四角形を書く
       t.fd(length);
-      t.lt(90);
+      t.rt(90);
     }
   } else { // 奇数なら
+    t.rt(30);  
     for (var j = 1; j <= 3; j++) { // 三角形を書く
       t.fd(length);
-      t.lt(120);
+      t.rt(120);
     }
+    t.lt(30);
   }
 
   // 次の図形を書く位置に移動する
   t.up();
-  t.rt(135);
+  t.rt(90);
   t.fd(length);
-  t.rt(180);
+  t.lt(45);
   t.down();
   
 }
@@ -216,11 +232,14 @@ for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
 ## 練習問題
 ### 四角形を10個描くプログラム
 四角形を横に並べて１０個描くプログラムを作ってみよう
+
 ![10個描くプログラム](img/chapter05/q_tenboxes.jpg)
+
 ファイル名は「tenboxes.js」とすること．
 
 ### 四角形を100個描くプログラム
 四角形を１００個を１０ｘ１０に並べて描くプログラムを作ってみよう
+
 ![四角形を100個描くプログラム](img/chapter05/q_hundredboxes.jpg)
 
 ファイル名は「hundredboxes.js」とすること．
