--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -21,6 +21,8 @@
 以下のプログラムは，関数を使って四角形を描くプログラムです．
 
 <!-- リスト 12.2.2.1 DrawRectangleMethod.js -->
+<span class="CopyButton" onclick="copycode('lst:6-1')">c</span>
+
 ```{#lst:6-1 .javascript .numberLines caption="DrawRectangleMethod"}
 var t = createTurtle();
 drawRectangle();
@@ -56,7 +58,9 @@ function [関数名](){
 以下のプログラムは，四角形を描く関数を使って，四角形を３つ描くプログラムです．
 
 <!-- リスト 12.2.3.1 DrawThreeRectanglesMethod.js -->
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-2')">c</span>
+
+```{#lst:6-2 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 四角形を３つ描く
@@ -128,7 +132,9 @@ Javaでは，関数の中に関数を定義することはできません．（ 
 </div>
 
 <!-- リスト 12.3.2.1 DrawTwoRectangles1.js -->
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-3')">c</span>
+
+```{#lst:6-3 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 drawBigRectangle();
@@ -158,7 +164,9 @@ function drawSmallRectangle() {
 </div>
 
 <!-- リスト 12.3.2.2 DrawTwoRectangles2.js -->
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-4')">c</span>
+
+```{#lst:6-4 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 drawRectangle(100);
@@ -199,7 +207,9 @@ function [関数名]([仮引数名]){
 </div>
 
 <!-- リスト 12.3.3.1 NewHouse1.js -->
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-5')">c</span>
+
+```{#lst:6-5 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 drawTriangle(100);
@@ -232,7 +242,9 @@ function drawRectangle(size) {
 </div>
 
 <!-- リスト 12.3.3.2 NewHouse2.js -->
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-6')">c</span>
+
+```{#lst:6-6 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 drawRegularPolygon(3, 100);
@@ -261,7 +273,9 @@ function drawRegularPolygon(n, size) {
 ### 変数の有効範囲
 次のプログラムは，一辺の長さを指定して四角形を描くプログラムを書こうとして，失敗した例です．
 
-```{#lst:6-1 .javascript .numberLines caption="ScopeError"}
+<span class="CopyButton" onclick="copycode('lst:6-7')">c</span>
+
+```{#lst:6-7 .javascript .numberLines caption="ScopeError"}
 var t = createTurtle();
 
 start();
@@ -290,7 +304,9 @@ function drawRectangle(){
 
 入力された長さのlength（実引数）を，関数にlength（仮引数）として渡し，四角形を描いています．
 
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-8')">c</span>
+
+```{#lst:6-8 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 start();
@@ -335,7 +351,9 @@ function drawRectangle(length){
 
 ### 窓付きの家を描くプログラム（引数を用いた，多角形を描く関数の抽象化）
 <!-- リスト 12.5.1.1 House05.js -->
-```{#lst:6-1 .javascript .numberLines caption="House"}
+<span class="CopyButton" onclick="copycode('lst:6-9')">c</span>
+
+```{#lst:6-9 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
 // 家を描く
