８章まで，昨年度の反省等も活かして修正

--- a/text/03-条件分岐.md
+++ b/text/03-条件分岐.md
@@ -350,6 +350,38 @@ if (rohrer >= 160) {
 <br>![](img/chapter03/condition_logic_and_false.png)
 </div>
 
+## コラム：条件式の誤り{.unnumbered}
+初学者が間違えやすい条件式の誤りを紹介します．特に複数の条件を指定するときには，上記の論理演算子を使うようにして，独自の記法を使わないでください．
+
+- カンマを使った複数条件指定はできません
+
+＜誤＞
+```
+if(a === 1, 2)
+```
+```
+if(a === 1, a === 2)
+```
+
+＜正＞
+```
+if(a === 1 || a === 2)
+```
+この場合は，1か2を指定したかったのでしょうから，ORで条件を指定します．
+
+- 複数の条件をまとめて書くことはできません．
+
+＜誤＞
+```
+if(1 < a < 100)
+```
+
+＜正＞
+```
+if(1 < a && a < 100)
+```
+複数の条件も一つ一つ分けて，論理演算子でつなぐようにしてください．
+
 ## 変数のスコープ（有効範囲）
 変数には有効範囲（スコープといいます）があります．Javascriptでは基本的に，宣言した変数のブロック内(「{}」で囲まれた範囲)がスコープになります．
 
