--- a/text/04-繰り返し.md
+++ b/text/04-繰り返し.md
@@ -118,7 +118,32 @@ while( [条件式] ) {
 
 変数が，5になったときに条件式が不成立(false)になるので，繰り返しが終ります． これで4回繰り返されるのが分かるでしょうか？
 
-<!-- ## コラム：while()の後に;はつけないで!{.unnumbered} -->
+## コラム：while()の後に;はつけないで!{.unnumbered}
+
+命令の区切りとして「;（セミコロン）」記号をつける必要があります(Javascriptでは１行１命令のときは省略できる）
+しかし，while文の後に;をつけてはいけません．whileの後にセミコロンを付けた次のようなプログラム
+
+```
+while ([条件式]) ; {
+  [繰り返したい処理]
+}
+```
+
+は，次のように解釈されます．
+```
+while ([条件式]) 
+  (空命令);
+  
+{
+  [繰り返したい処理]
+}
+```
+
+つまり，空命令（なにもしない処理）を繰り返し，繰り返しが終わった後に，繰り返したかった処理が１回実行するプログラムとして解釈されるということです．
+
+このプログラムでは，空命令が繰り返されてしまい，コンピュータは空命令を実行し続けて，プログラムが止まらなくなります．このような，プログラムミスでループを抜けることができなくなったプログラムの状態ことを，「無限ループ」と表現することもあります．無限ループに陥ると，CPUの負荷が高くなり，コンピュータの動作が重くなったり，動作しなくなったりする可能性があります．この状態を回復するには，ブラウザを再起動したり，OSを再起動する必要がある場合もあります．
+
+if文やfor文の場合にも同様ですので，注意してください．
 
 ## 応用：円を書くプログラム
 繰り返しを使うと，円を簡単に書くことができます．次のプログラムを実行してみましょう．
