--- a/text/05-入れ子.md
+++ b/text/05-入れ子.md
@@ -196,7 +196,6 @@ for (var j = 1; j <= 10; j++) { // （円を）10個描く
 ```{#lst:5-6 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-t.warp(200, 100);
 var length = 50; // １辺の長さ
 
 for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
@@ -228,6 +227,11 @@ for (var i = 1; i <= 8; i++) { // 図形を描く（8回繰り返す）
 ![三角形と四角形を交互に書くプログラム](img/chapter05/square_and_triangle.gif)
 
 このプログラムでは，剰余演算子と，先ほど説明した繰り返しの変数を利用して， 繰り返した数が偶数なら四角，奇数なら三角を描くようにプログラムされています．
+
+<!-- ## コラム：warp命令{.unnumbered}
+上記のプログラムでは，初期位置を決めるのにwarp命令を使用しています．x座標とy座標を指定して，タートルを指定の場所に移動することができます．
+
+便利ではあるのですが，教育的な観点から，使用しなくても構いませんし，使用するときも初期位置を決めるときにのみ使用してください． -->
 
 ## 練習問題
 ### 四角形を10個描くプログラム
