--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -25,6 +25,7 @@
 
 ```{#lst:6-1 .javascript .numberLines caption="DrawRectangleMethod"}
 var t = createTurtle();
+
 drawRectangle();
 
 // 四角形を描く
@@ -40,9 +41,9 @@ function drawRectangle() {
 
 関数は一度定義すれば，同じ関数を何度も呼び出して使うことができます．
 
-このプログラムでは5行目から10行目で関数を定義し，2行目でそれを呼び出しています．
+このプログラムでは6行目から11行目で関数を定義し，3行目でそれを呼び出しています．
 				
-引数．戻り値なしの関数定義，関数呼び出しの一般形は以下の通りです
+引数．戻り値なしの関数定義の一般形は以下の通りです
 
 ```
 function [関数名](){
@@ -50,12 +51,43 @@ function [関数名](){
 }
 ```
 
+関数呼び出しの一般形は以下のとおりです．
 ```				
 [関数名]();
 ```
 
+## 命名規則
+関数，変数には好きな名前をつけることができます．ただし，数字から始まる名前や予約語は使用できません．
+
+ルールから逸脱していなければ自由に命名することができ，プログラムは動作するのですが，プログラムは自分だけが読むものではありません（皆さんのプログラムもチェックする先生，TASAさんが読んでいます）．したがって，皆が分かりやすくなるような作法（ガイドライン）を理解して，守っていただけると助かります．
+
+Javascriptのガイドラインとして有名なものには，googleのガイドがあります．
+
+- https://google.github.io/styleguide/jsguide.html#naming
+
+ここで，本テキストでのガイドラインを紹介すると，
+
+- 大原則：分かりやすい名前をつける
+    - a, b, cなどの変数名，１文字変数名はお控えください．繰り返し変数のi, j, k，座標のx, yは例外です．
+    - 短いほうが良いのですが，わかりにくくなるようでしたら，ある程度長くなっても仕方がありません．
+- 複数語を含めた命名規則（lower camel case，といいます．下記参照）
+    - 「draw rectangle」のように複数の単語から構成される名前をつけたい場合には，
+    - キャメルケース
+        - 単語の最初の文字を大文字にして繋げる方法です．大文字の部分がラクダのコブように見えます．最初の文字を小文字にするlower camel caseと，最初の文字を大文字にするupper camel caseがあります．
+        - lower camel case 例) height, drawHundredHouses(), calculateConsumptionTax()
+        - upper camel case 例) Height, DrawHundredHouses(), CalculateConsumptionTax()
+    - スネークケース
+        - 単語を「_」アンダーバーで繋げる方法です．全体として蛇のように見えます．全部の文字を小文字にするlower snake caseと全部の文字を大文字にするupper snake caseがあります．
+        - lower snake case 例）height, draw_hundred_houses(), calculate_consumption_tax()
+        - upper snake case 例）HEIGHT, DRAW_HUNDRED_HOUSES(), CALCULATE_CONSUMPTION_TAX()
+- そのほか
+    - 日本語，ローマ字でも結構です．例) 家を描く(); ie-wo-kaku();
+    - 英語の場合は，動詞を先に，例) drawRectangle
+
+本テキストでは，小文字から始めるキャメルケース（lower camel case）で統一しています．
+
 ### 関数の処理の順序
-以下のプログラムは，四角形を描く関数を使って，四角形を３つ描くプログラムです．
+以下のプログラムは，四角形を描く関数を作って（定義して），四角形を３つ描くプログラムです．
 
 <!-- リスト 12.2.3.1 DrawThreeRectanglesMethod.js -->
 <span class="CopyButton" onclick="copycode('lst:6-2')">c</span>
@@ -63,12 +95,15 @@ function [関数名](){
 ```{#lst:6-2 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-// 四角形を３つ描く
-for (var i = 0; i < 3; i++) {
-    drawRectangle();// 四角形を描く
-    move();// 次の描く位置まで移動する
-}
+main();
 
+function main(){
+    // 四角形を３つ描く
+    for (var i = 0; i < 3; i++) {
+        drawRectangle();// 四角形を描く
+        move();// 次の四角形を描く位置まで移動する
+    }
+}
 
 // 四角形を描く
 function drawRectangle() {
@@ -94,7 +129,9 @@ function move() {
 ![関数の処理の順序](img/chapter06/functionflow.png)
 </div>
 
-四角形を３つ描くプログラムでは，まず，四角形を描く関数を呼び， 四角形を描き終わったら，次の描く位置まで移動する関数を呼び， 移動し終わったら，再び四角形を描く関数を呼び…という処理を３回繰り返しています．
+このプログラムでは，mainという関数を定義して，3行目でmain関数を呼び出しています．
+
+main関数中の四角形を３つ描くプログラムでは，まず，四角形を描く関数を呼び， 四角形を描き終わったら，次の描く位置まで移動する関数を呼び， 移動し終わったら，再び四角形を描く関数を呼び…という処理を３回繰り返しています．
 
 <!-- ### 関数の定義位置の注意点
 次のプログラムは，四角形を描くプログラムを書こうとして，失敗した例です．
@@ -120,6 +157,8 @@ Javaでは，関数の中に関数を定義することはできません．（ 
 
 -->
 
+このように，関数をつくると自分で命令を作り，プログラムを部品に分解することができます．反面，いままでプログラムは上から順番に実行されていましたが，関数呼び出しによりいろいろな場所へ飛ぶ可能性が出てきます．実行順序に気をつける必要が出てきます．（なお，関数の中では，上から順番に実行されます．）
+
 ## 引数付関数
 ### 引数とその目的
 関数ブロック内で宣言された変数は，関数ブロック内でしか有効ではありません． しかし，ある関数から他の関数を呼ぶときに，データを受け渡したいことがあります． 引数とは，関数ブロック外と，関数ブロック内でデータをやり取りする仕組みです． 引数を使うことで，関数ブロック外から，関数ブロック内にデータを受け取ることができます．
@@ -137,8 +176,12 @@ Javaでは，関数の中に関数を定義することはできません．（ 
 ```{#lst:6-3 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-drawBigRectangle();
-drawSmallRectangle();
+main();
+
+function main(){
+    drawBigRectangle();
+    drawSmallRectangle();
+}
 
 // 一辺100の大きな四角形を書く
 function drawBigRectangle() {
@@ -169,8 +212,12 @@ function drawSmallRectangle() {
 ```{#lst:6-4 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-drawRectangle(100);
-drawRectangle(20);
+main();
+
+function main(){
+    drawRectangle(100);
+    drawRectangle(20);
+}
 
 // 一辺がsizeの四角形を書く
 function drawRectangle(size) {
@@ -212,9 +259,13 @@ function [関数名]([仮引数名]){
 ```{#lst:6-5 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-drawTriangle(100);
-t.rt(90);
-drawRectangle(100);
+main();
+
+function main(){
+    drawTriangle(100);
+    t.rt(90);
+    drawRectangle(100);
+}
 
 // 三角形を書く
 function drawTriangle(size) {
@@ -247,10 +298,13 @@ function drawRectangle(size) {
 ```{#lst:6-6 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-drawRegularPolygon(3, 100);
-t.rt(90);
-drawRegularPolygon(4, 100);
+main();
 
+function main(){
+    drawRegularPolygon(3, 100);
+    t.rt(90);
+    drawRegularPolygon(4, 100);
+}
 
 // 指定された角数の正多角形を描く
 function drawRegularPolygon(n, size) {
@@ -278,9 +332,9 @@ function drawRegularPolygon(n, size) {
 ```{#lst:6-7 .javascript .numberLines caption="ScopeError"}
 var t = createTurtle();
 
-start();
+main();
 
-function start(){
+function main(){
     var length = input('一辺の長さ？');
     drawRectangle();
 }
@@ -309,9 +363,9 @@ function drawRectangle(){
 ```{#lst:6-8 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
-start();
+main();
 
-function start(){
+function main(){
     var length = input('一辺の長さ？');
     drawRectangle(length);
 }
@@ -356,11 +410,15 @@ function drawRectangle(length){
 ```{#lst:6-9 .javascript .numberLines caption="House"}
 var t = createTurtle();
 
+main();
+
 // 家を描く
-//タートルを動かす処理
-drawRoof(); // 屋根を描く
-drawWall(); // 壁を描く
-drawWindow(); // 窓を描く
+function main(){
+    //タートルを動かす処理
+    drawRoof(); // 屋根を描く
+    drawWall(); // 壁を描く
+    drawWindow(); // 窓を描く
+}
 
 // 屋根を描く
 function drawRoof() {
@@ -427,7 +485,45 @@ function moveTurtle(direction, distance) {
 - `function fd(length){...省略...}`
 - `function rt(angle){...省略...}`
 
-ある目的のために使う関数の集まりを作り，関数群を再利用します． この関数の集まりのことを「ライブラリ」といいます． fd, rtなどのタートルに使う命令は「タートルライブラリ」としてどこかに定義されているのです．
+ある目的のために使う関数の集まりを作り，関数群を再利用します． この関数の集まりのことを「ライブラリ」といいます． fd, rtなどのタートルに使う命令は「タートルライブラリ」としてライブラリに定義されているのです．
+
+皆さんの利用しているfdプログラムの実際の中身は以下のようになります．ちょっと難しいかもしれませんが，プログラムの構文としてはここまでにおおよそ学習してきたものを使っていることが感じられるのではないかと思います．タートルシステムもSumatraもJavascript言語で書かれています．たった数週間で学習した要素の組み合わせ次第で，複雑なプログラムも作ることができることを感じていただければと思います．
+```
+    t.fd = function (d) {
+        if (d < 0) {
+            t.bk(-d);
+        } else {
+            if (jsCRiPS.withKame) {
+                jsCRiPS.th = Thread.create(function (d, t) {
+                    var xx = t.x,
+                        yy = t.y;
+                    var dx = Math.cos(deg2rad(t.angle));
+                    var dy = Math.sin(deg2rad(t.angle));
+                    t.setRxRy();
+                    for (var i = jsCRiPS.moveStep; i < d; i += jsCRiPS.moveStep) {
+                        t.x = xx + dx * i;
+                        t.y = yy + dy * i;
+                        jsCRiPS.draw(t);
+                        t.setRxRy();
+                        Thread.sleep(jsCRiPS.sleepTime);
+                    }
+                    t.x = xx + dx * d;
+                    t.y = yy + dy * d;
+                    jsCRiPS.draw(t);
+                }, d, t);
+            } else {
+                var xx = t.x,
+                    yy = t.y;
+                var dx = Math.cos(deg2rad(t.angle));
+                var dy = Math.sin(deg2rad(t.angle));
+                t.setRxRy();
+                t.x = xx + dx * d;
+                t.y = yy + dy * d;
+                jsCRiPS.draw(t);
+            }
+        }
+    };
+```
 
 <!-- ## コラム：亀に命令を追加する{.unnumbered}
 Javascriptで関数の定義をする方法には，次のような書き方もあります．
@@ -495,7 +591,8 @@ drawBoxes(5);
 ファイル名は「twohouses.js」とすること．
 
 ### 中心角を指定して円弧を描くプログラム
-中心角を指定して円弧を描く関数「function drawArc(angle)」を作り，テストしてください．
+中心角を指定して円弧を描く関数「function drawArc(angle)」を作成しなさい．
+main関数を作成し，作成したdrawArc関数をいくつか呼び出して(angleを変えて)テストしてください．
 
 (ヒント：中心角が３６０ならば円に，１８０ならば半円に，１ならば点のようになります．以下に，120度の場合と，300度の場合の例を示します）
 
@@ -506,28 +603,36 @@ drawBoxes(5);
 ファイル名は「drawarc.js」とすること．
 
 ### レモンを描くプログラム
-drawArc(angle)を利用してレモン型の図形を描く関数「function drawLemon()」を作り，呼び出してテストをしてください．
+前の問題で作ったdrawArc(angle)を利用してレモン型の図形を描く関数「function drawLemon()」を作ってください．
+
+- drawArc(angle)関数は，前の問題で作ったものをコピーします．<u>drawArc関数は書き換えないでください．</u>
+- drawArc関数を何回か呼び出しながら，レモン型の図形を描く関数「function drawLemon()」を作成しなさい．
+- main関数を作成し，作成したdrawLemon関数をいくつか呼び出してテストしてください．
 
 ファイル名は「drawlemon.js」とすること．
 
 ![レモン型の図形を描く関数](img/chapter06/q_drawlemon.png)
 
 ### ちょうちょを描くプログラム（関数の多段呼び出しの練習）
-蝶を描く関数drawButterfly()を作ってください．（ヒント：レモン型を描く関数drawLemon()を部品として使う）
+蝶を描く関数drawButterfly()を作ってください．
+
+＜条件＞
+- 前の問題で作成したdrawLemon()をコピーして<u>書き換えずに使う</u>こと
+- main()関数からdrawButterfly()を呼び出してテストすること
 
 ![蝶を描く関数](img/chapter06/q_drawbutterfly.png)
 
 ファイル名は「butterfly.js」とすること．
 
 ### 花を描くプログラム（関数の再利用）
-drawLemon()を再利用して，drawFlower()のように花を描く関数をつくってください．
+前の問題で作成したdrawLemon()を再利用して，花を描く関数drawFlower()を作ってください．
 
 ![花を描く関数](img/chapter06/q_drawflower.png)
 
 ファイル名は「flower.js」とすること．
 
 ### マス目を描くプログラム
-x行y列のマス目を書く関数を作ろう．以下のような定義を持つ
+x行y列のマス目を書く関数を作ってください．以下のような定義を持つ
 					
 ```
 function drawMasume(row, col, size) {
@@ -536,7 +641,6 @@ function drawMasume(row, col, size) {
 ```
 				
 出力例を以下に示す．
-
 					
 `drawMasume(2, 3, 50);`					
 				
