6, 7章教材調整

--- a/text/06-関数.md
+++ b/text/06-関数.md
@@ -414,7 +414,6 @@ main();
 
 // 家を描く
 function main(){
-    //タートルを動かす処理
     drawRoof(); // 屋根を描く
     drawWall(); // 壁を描く
     drawWindow(); // 窓を描く
@@ -605,7 +604,7 @@ main関数を作成し，作成したdrawArc関数をいくつか呼び出して
 ### レモンを描くプログラム
 前の問題で作ったdrawArc(angle)を利用してレモン型の図形を描く関数「function drawLemon()」を作ってください．
 
-- drawArc(angle)関数は，前の問題で作ったものをコピーします．<u>drawArc関数は書き換えないでください．</u>
+- drawArc(angle)関数は，前の問題で作ったものをコピーします．<u>drawArc(angle)関数は書き換えない</u>でください．
 - drawArc関数を何回か呼び出しながら，レモン型の図形を描く関数「function drawLemon()」を作成しなさい．
 - main関数を作成し，作成したdrawLemon関数をいくつか呼び出してテストしてください．
 
@@ -613,23 +612,27 @@ main関数を作成し，作成したdrawArc関数をいくつか呼び出して
 
 ![レモン型の図形を描く関数](img/chapter06/q_drawlemon.png)
 
-### ちょうちょを描くプログラム（関数の多段呼び出しの練習）
-蝶を描く関数drawButterfly()を作ってください．
+### 花を描くプログラム（関数の再利用）
+前の問題で作成したdrawLemon()を利用して，花を描く関数drawFlower()を作ってください．
 
 ＜条件＞
-- 前の問題で作成したdrawLemon()をコピーして<u>書き換えずに使う</u>こと
-- main()関数からdrawButterfly()を呼び出してテストすること
-
-![蝶を描く関数](img/chapter06/q_drawbutterfly.png)
-
-ファイル名は「butterfly.js」とすること．
-
-### 花を描くプログラム（関数の再利用）
-前の問題で作成したdrawLemon()を再利用して，花を描く関数drawFlower()を作ってください．
+- 前の問題で作成したdrawLemon()をコピーして<u>書き換えずに使う</u>こと．（注：drawLemon関数を使うには，drawArcも必要であるのでコピーすること）
+- main()関数を作り，main関数からdrawFlower()を呼び出してテストすること
 
 ![花を描く関数](img/chapter06/q_drawflower.png)
 
 ファイル名は「flower.js」とすること．
+
+### ちょうちょを描くプログラム（関数の多段呼び出しの練習）
+前の問題で作成したdrawLemon()を利用して，蝶を描く関数drawButterfly()を作ってください．
+
+＜条件＞
+- 前の問題で作成したdrawLemon()をコピーして<u>書き換えずに使う</u>こと．（注：drawLemon関数を使うには，drawArcも必要であるのでコピーすること）
+- main()関数を作り，main関数からdrawButterfly()を呼び出してテストすること
+
+![蝶を描く関数](img/chapter06/q_drawbutterfly.png)
+
+ファイル名は「butterfly.js」とすること．
 
 ### マス目を描くプログラム
 x行y列のマス目を書く関数を作ってください．以下のような定義を持つ
