--- a/text/07-関数2.md
+++ b/text/07-関数2.md
@@ -260,8 +260,10 @@ function showEndTitle() {
 ``` -->
 
 ## 関数の単体テスト
-### 結果の出力
+
 本節では，ユーザから底と指数の入力を受け取り，累乗を計算するプログラムの例を利用して，関数の単体テストの作り方について説明します．
+
+### テスト方法A：　結果の出力
 
 関数をテストするのに，いちいち入力していたのでは手間がかかりますし，どのテストをやったのかを忘れてしまいます． さらには，プログラムを一行だけ修正したとしても，どの箇所が動かなくなるかは予測できないため，全てのテストをやり直す必要があります． したがって，テストはテストプログラムを作って自動化するのがよいです．具体的には，次のプログラムのように列挙して呼び出し，出力すると良いでしょう.
 
@@ -298,7 +300,7 @@ function calculatePower(base, exponent) {
 }
 ```
 
-### テストの関数化
+### テスト方法B：　テストの関数化
 テストの表示部分が冗長で，変更が大変です．テストは関数にしましょう．
 
 この方法を「テスト方法B」と名付けます．
@@ -335,7 +337,7 @@ function calculatePower(base, exponent) {
 }
 ```
 
-### 期待値とテスト正否の出力
+### テスト方法C：　期待値とテスト正否の出力
 Power02のプログラムでもテストできていますが，答えが合っているかを毎回目視で確認する必要があります．プログラムに答え（「期待値」といいます）を書いておき，照合結果も出力できるといいですね！
 
 この方法を「テスト方法C」と名付けます．
