part3の初期バージョン完成

--- a/text-part3/00-タイトル.md
+++ b/text-part3/00-タイトル.md
@@ -1,3 +1,10 @@
-% Text-PartIII
+% コンピューティング実習第3部（HTML+Javascript編）
 % 社会情報学部
 % version 0.1
+
+<script>
+    function copycode(idstr){
+        document.getSelection().selectAllChildren(document.getElementById(idstr).querySelector('code')); 
+        document.execCommand('copy');
+    }
+</script>
